--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -1,7 +1,4 @@
 @media screen and (min-width: 1024px) {
-    /*Hero-section*/   
-
-
 
     .hero-section{
         margin-top: 150px;
@@ -29,7 +26,6 @@
         z-index: 1;
     }
 
-    /*  */
 
     .section-header p{
         width: 584px;
@@ -44,30 +40,22 @@
     }
 
     .pink-section-content{
-        padding-right: 92px;
+        padding-right: auto;
     }
 
-    /*Features*/   
-    
-    
-    
-    .features .card:before{
-        content: '';
-        display: block;
-        background-image: url('../image/backimg.svg');
-        background-repeat: no-repeat;
-        background-position: right center;
-        background-size: contain;
-        padding: absolute;
-        top: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
+    .features .card-content{
+        height: 350px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    .features .card-content .card-body{
+        margin-bottom: auto;
     }
 
 }
 
-/*Hero-section*/
 
 @media screen and (max-width: 1024px) {
     section{
@@ -91,7 +79,70 @@
      .swiper-slide{
         flex: 0 0 100%;
     }
+
+    .pink-section-small{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .pink-section-content{
+        text-align: center;
+    }
+
+    .pink-section-small img{
+        width: 80%;
+        height: 50%;
+        margin: 5px auto;
+    }
+
+    .features .card{
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap; 
+        padding-top: 50px;
+        padding-bottom: 30px;   
+    }
+    .features .card-content{
+        flex: 1 0 0;
+    }
+
+
+    .features .card-image,
+    .features .card-content{
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 50%;
+    }
+
     
+    .features .card-content{
+        background-color: transparent;
+    }
+    
+}
+
+
+@media screen and (max-width: 768px) {
+    .features .card{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        flex-wrap: wrap; 
+        padding-top: 50px;
+        padding-bottom: 30px;   
+    }
+
+    .features .card-content{
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 90%;
+    }
+    .features .card-image{
+        padding-left: 15px;
+        padding-right: 15px;
+        width: 80%;
+    }
 }
 
 .hero-section .hero-content h1{
@@ -131,12 +182,21 @@
     font-size: 40px;
 }
 
+
 .pink-section {
     color: #4B5D68;
     font-size: 18px;
     font-weight: 500;
 }
 
+.pink-section-content h2{
+    font-size: 30px;
+    margin-bottom: 20px;
+}
+
+.pink-section-content p{
+    line-height: 1.5;
+}
 /*Features*/
 
 /* .features .section-header{
