--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,6 +4,7 @@
 @import url('grid.css');
 @import url('button.css');
 @import url('header.css');
+@import url('menu.css');
 @import url('footer.css');
 @import url('section.css');
 @import url('swiper.css');
