--- a/assets/css/menu.css
+++ b/assets/css/menu.css
@@ -94,3 +94,10 @@
         
     }    
 }
+
+@media screen and (min-width: 1024px) and (max-width: 1024px) {
+    .navbar {
+        display: none;
+    }
+
+}
