--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -57,3 +57,53 @@
     }
     
 }
+
+
+
+@media screen and (min-width: 1024px) and (max-width: 1024px) { 
+    .row-small-size .column{
+        border: none;
+    }
+    .navigation{
+        width: 700px;
+        height: 50px;
+        margin-left: 20px;
+    }
+
+    .navigation .navigation-list{
+
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-left: -15px;
+        margin-right: -15px;
+        width: 500px;
+    }
+    .navigation .navigation-list .navigation-item{
+        margin: 0;
+        margin-left: auto;
+        width: 80px;
+    }
+    /* .navigation{
+        margin-left: 54px;
+    } */
+
+    .navigation .navigation-list .navigation-item .navigation-link{
+        display: block;
+        font-size: 1rem;
+        transition: 0.5s;
+        color: #637682;
+        font-weight: 500;
+        padding: 15px;
+        width: 80px;
+        text-align: center;
+    }
+    
+    .navigation .navigation-list .navigation-item:hover .navigation-link{
+        font-weight: 600;
+        color: #fff;
+        text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        background-color: #94b0c2;
+    }
+    
+}
