--- a/assets/css/section.css
+++ b/assets/css/section.css
@@ -2,12 +2,21 @@
 
     .hero-section{
         margin-top: 150px;
+        padding: 20px;
+        overflow-x: hidden;
+        width: 100%;
+        height: 600px;
     }
 
     .hero-section .hero-image{
         padding-top: 80px;
+        overflow-y: hidden;
+        width: 100%;
     }
     
+    /* .hero-section .hero-image img{
+        width: 60%;
+    } */
 
     .hero-section .hero-content h1{
         max-width: 745px;
@@ -28,7 +37,7 @@
 
 
     .section-header p{
-        width: 584px;
+        max-width: 584px;
         margin: 0 auto; 
     }
 
@@ -143,6 +152,7 @@
         padding-right: 15px;
         width: 80%;
     }
+    
 }
 
 .hero-section .hero-content h1{
@@ -250,4 +260,36 @@
         width: 200px;
         margin: 5px auto;
     }
+}
+
+
+@media screen and (min-width: 1024px) and (max-width: 1024px) { 
+    .hero-section .hero-content{
+        display: flex;
+        flex-direction: column;
+        text-align: left;
+        padding: 20px;
+    }
+
+    .hero-section .hero-content h1{
+        font-size: 36px;
+    }
+
+    .hero-section .hero-content a{
+        margin-left: 0;
+    }
+    .hero-section .hero-image{
+        padding-top: 20px;
+        margin-left: 500px;
+        height: 100%;
+    }
+    
+    .hero-section .hero-image img{
+        height: 100%;
+        width: 500px;
+        height: 400px;
+        border-radius: 5%;
+        margin-right: 50px;
+    }
+    
 }
